--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2024"
 
 [workspace.dependencies]
 pokisona-markdown.path = "./pokisona-markdown"
+yoke = { version = "0.8.0", features = ["derive"] }
