--- a/pokisona/Cargo.toml
+++ b/pokisona/Cargo.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.48", features = ["cargo", "derive"] }
+color-eyre = "0.6.5"
+dirs = "6.0.0"
 pokisona-markdown.workspace  = true
+strum = "0.27.2"
+strum_macros = "0.27.2"
+iced = { git = "https://github.com/iced-rs/iced", features = ["smol"] }
+catppuccin = "2.5.1"
+smol = "2.0.2"
