--- a/pokisona/Cargo.toml
+++ b/pokisona/Cargo.toml
@@ -10,6 +10,6 @@ dirs = "6.0.0"
 pokisona-markdown.workspace  = true
 strum = "0.27.2"
 strum_macros = "0.27.2"
-iced = { git = "https://github.com/iced-rs/iced", features = ["smol"] }
+iced = { git = "https://github.com/iced-rs/iced", features = ["smol", "debug"] }
 catppuccin = "2.5.1"
 smol = "2.0.2"
