--- a/pokisona/Cargo.toml
+++ b/pokisona/Cargo.toml
@@ -13,5 +13,6 @@ strum_macros = "0.27.2"
 iced = { git = "https://github.com/iced-rs/iced", features = ["smol", "debug"] }
 catppuccin = "2.5.1"
 smol = "2.0.2"
-hashbrown = "0.16.0"
 dashmap = "6.1.0"
+itertools.workspace = true
+either = "1.15.0"
