--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,6 @@ edition = "2024"
 [dependencies]
 yoke = { version = "0.8.0", features = ["derive"] }
 # TODO: switch back to crates.io itertools when https://github.com/rust-itertools/itertools/pull/1071 is merged
-catppuccin = "2.6.0"
-itertools = { git = "https://github.com/janTatesa/itertools", branch = "add_peeking_map_while" }
-iced_selection.git = "https://git.sr.ht/~pml68/iced_selection"
 iced = { git = "https://github.com/iced-rs/iced", features = [
   "smol",
   "advanced",
@@ -16,6 +13,9 @@ iced = { git = "https://github.com/iced-rs/iced", features = [
   "crisp",
   "thread-pool",
 ], default-features = false, branch = "master" }
+catppuccin = "2.6.0"
+iced_selection = { git = "https://git.sr.ht/~pml68/iced_selection", branch = "feat/on-link-hover" }
+itertools = { git = "https://github.com/janTatesa/itertools", branch = "add_peeking_map_while" }
 serde = { version = "1.0.228", features = ["derive"] }
 clap = { version = "4.5.48", features = ["cargo", "derive"] }
 color-eyre = "0.6.5"
@@ -26,3 +26,5 @@ figment = { version = "0.10.19", features = ["toml"] }
 pest_derive = { version = "2.8.3", features = ["grammar-extras"] }
 pest = "2.8.3"
 bitflags = "2.10.0"
+url = "2.5.7"
+open = "5.3.2"
