--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ iced = { git = "https://github.com/iced-rs/iced", features = [
 ], default-features = false, branch = "master" }
 catppuccin = "2.6.0"
 iced_selection = { git = "https://git.sr.ht/~pml68/iced_selection", branch = "feat/on-link-hover" }
-itertools = { git = "https://github.com/janTatesa/itertools", branch = "add_peeking_map_while" }
 serde = { version = "1.0.228", features = ["derive"] }
 clap = { version = "4.5.48", features = ["cargo", "derive"] }
 color-eyre = "0.6.5"
@@ -29,3 +28,7 @@ bitflags = "2.10.0"
 url = "2.5.7"
 open = "5.3.2"
 camino = "1.2.1"
+itertools = "0.14.0"
+
+[features]
+hot = ["iced/hot"]
