--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,21 +6,20 @@ edition = "2024"
 [dependencies]
 # TODO: switch back to crates.io itertools when https://github.com/rust-itertools/itertools/pull/1071 is merged
 iced = { version = "0.14", features = [
-  "smol",
+  "tokio",
   "advanced",
   "wgpu",
   "crisp",
   # I personally don't use x11, make an issue if you do
   # "x11",
   "wayland",
+  "image",
 ], default-features = false }
 catppuccin = "2.6.0"
 serde = { version = "1.0.228", features = ["derive"] }
 clap = { version = "4.5.48", features = ["cargo", "derive"] }
 color-eyre = "0.6.5"
 dirs = "6.0.0"
-smol = "2.0.2"
-dashmap = "6.1.0"
 figment = { version = "0.10.19", features = ["toml"] }
 pest_derive = { version = "2.8.3", features = ["grammar-extras"] }
 pest = "2.8.3"
@@ -31,3 +30,7 @@ camino = "1.2.1"
 itertools = "0.14.0"
 iced_selection = "0.4.0"
 lucide-icons = { version = "0.562.0" }
+bytes = "1.11.0"
+isahc = "1.7.2"
+reqwest = "0.13.1"
+tokio = { version = "1.49.0", features = ["full"] }
